# aura-app

./: .dockerignore  .env.dev.example  .env.production.example  .flake8  .gitignore  .safety-project.ini  API.md  CI_CD.md  DATABASE_SCHEMA.md  DEV_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.nginx  EN.md  FR.md  MIGRATION_GUIDE.md  Makefile  Procfile  RAILWAY_DB_RESET.md  README.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.example  export_data.py  manage.py  nginx.conf  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt  reset_railway_db.sh  test_keywords.py
.claude/agents/: railway-db-troubleshooter.md
.github/: README.md  SECRETS.md
.github/workflows/: build-docker.yml  ci.yml  codeql.yml  deploy.yml  pr-checks.yml  release.yml
.home/.safety/: auth.ini  config.ini
Tools/: audit_deps.sh
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/emails/: password_reset_email.html  password_reset_email.txt  password_reset_subjet.txt
accounts/templates/accounts/: profile.html  profile_simple.html
artworks/: admin.py  api.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  widgets.py
artworks/management/commands/: import_fake_artworks.py  populate_art_data.py
artworks/migrations/: 0001_initial.py
artworks/templates/artworks/: artist_confirm_delete.html  artist_detail.html  artist_export.html  artist_form.html  artist_list.html  artwork_confirm_delete.html  artwork_detail.html  artwork_export.html  artwork_form.html  artwork_list.html  collection_confirm_delete.html  collection_detail.html  collection_export.html  collection_form.html  collection_list.html  exhibition_confirm_delete.html  exhibition_detail.html  exhibition_export.html  exhibition_form.html  exhibition_list.html  (+6 more)
artworks/templatetags/: __init__.py  placeholder_extras.py
aura_app/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
aura_app/settings/: __init__.py  base.py  dev.py  prod.py  production.py  tests.py
contacts/: admin.py  api.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
core/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
docs/: CHECKLIST_R2_PRIVATE.md  PRODUCTION_SETTINGS_CHANGES.md  RAILWAY_R2_SETUP.md  requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  installation.rst  models.rst
notes/: admin.py  api.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templatetags/: markdown_extras.py
services/: images_service.py  pdf_service.py
setup/: art_types.json  artists.json  config.py  create_aura_schema.py  supports.json  techniques.json
setup/fill_up/: fake_artworks.json
ssl/: aura-art.org.crt  aura-art.org.key
static/: style.css
static/flavicon/: site.webmanifest
static/js/: select_or_create.js  theme.js
templates/: base.html  base_detail.html  base_form.html  base_list.html  site.webmanifest
templates/core/: 404.html  500.html
templates/includes/: action_buttons.html  artwork_card.html  contact_card.html  empty_state.html  form_actions.html  note_card.html  page_header.html  pagination.html  select_plus.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt  register.html
(+18 files in other folders)
