[project]
name = "aura-app"
version = "1.0.1"
author = {name = "Dimitri Gaggioli", email = "dimitri.gaggioli@gmail.com"}
description = "A Django app to manage your art collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "django-environ>=0.12.0",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
    "black>=25.11.0",
    "bleach>=6.3.0",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.1",
    "django-appconf>=1.2.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-csp>=4.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.0.0",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "imagesize>=1.4.1",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "pip>=25.3",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "requests>=2.32.5",
    "urllib3>=2.6.0",
    "weasyprint>=67.0",
]
