[project]
name = "aura-app"
version = "1.0.1"
author = {name = "Dimitri Gaggioli", email = "dimitri.gaggioli@gmail.com"}
description = "A Django app to manage your art collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "django-environ>=0.13.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
    "black>=26.3.1",
    "bleach>=6.3.0",
    "crispy-bootstrap5>=2026.3",
    "dj-database-url>=3.1.2",
    "django-appconf>=1.2.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.6",
    "django-csp>=4.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.1.0",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "flake8>=7.3.0",
    "gunicorn>=25.3.0",
    "imagesize>=2.0.0",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "pip>=26.0.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "requests>=2.33.1",
    "urllib3>=2.6.3",
    "weasyprint>=68.1",
    "mailtrap>=2.4.0",
]
